Revision history for Perl extension Bitcoin::Crypto.

0.996
	- replace Throwable dependency with custom error class
	- add version number to each of module's files
	- improve bytestring checking - should now throw exception for undefs and refs
	- improve error trapping - now properly executes eval
	- documentation improvements

0.995 Wed Sep 16 18:00:00 2020
	- downgrade and fix dependencies
	- fix minimum perl version
	- improve documentation
	- explicitly document beta version

0.994 Sun Sep 06 22:00:00 2020
	- remove Math::EllipticCurve::Prime dependency - replaced with custom function
	- remove Math::BigInt::GMP dependency - replaced with LTM
	- replace most of Base58 module internals with CryptX, leave the module for Base58Check
	- remove base58_preserve functions - standard Base58 encoding decoding now preserves null bytes
	- replace type checks with Type::Tiny
	- add mnemonic_from_entropy method to Bitcoin::Crypto::Key::ExtPrivate
	- verify bytestrings on method inputs (exception is thrown)
	- remove trash methods from classes (namespace::clean)
	- performance improvements
	- update dependencies
	- improve documentation
	- tidy up source files with perltidy

0.993 Thu Jan 30 23:00:00 2020
	- replace some dependencies with CryptX functions
	- add shortcut functions in Bitcoin::Crypto package (autoloading of important classes)
	- more tests and docs
	- repo cleanup

0.992 Sun Jan 12 10:00:00 2020
	- change Bitcoin::Crypto::Network register method to accept a plain hash (instead of a hashref)
	- run examples during tests

0.991 Wed Jan 08 22:00:00 2020
	- rewrite Bitcoin::Crypto::Network to Moo (changed interface)
	- add examples directory and bip44 implementation example
	- 32 bit compatibility attempt
	- add the missing test to distribution

0.99 Sun Jan 05 20:00:00 2020
	- almost complete rewrite of the module
	- added extended keys
	- added segwit compatibility
	- added script execution
	- many small improvements